# IntervalMappingHits

./: Makefile.am  README.md  configure.ac
m4/: ax_with_htslib.m4
src/: argument.cpp  argument.h  interval.h  interval_collection.cpp  interval_collection.h  interval_hits.h  main.cpp  reference_interval.cpp  reference_interval.h  sam_bam_reader.h
tests/: test_argument.cpp  test_interval.cpp  test_main.cpp  test_reference_interval.cpp
